--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@webpack-cli/generators": "^2.5.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -22,9 +23,8 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1",
     "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "*",
     "webpack": "^5.75.0",
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
