--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "@typescript-eslint/dot-notation": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/strict-boolean-expressions": "off",
+        "n/no-callback-literal": "off",
         "no-var": "error",
         "indent": ["error", 4],
         "no-multi-spaces": "error",
