--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "serve": "webpack serve"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "dotenv-webpack": "^8.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5"
   }
 }
