--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.15",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -42,8 +42,9 @@
     "serve": "webpack serve"
   },
   "dependencies": {
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "dotenv-webpack": "^8.0.1",
+    "mini-css-extract-plugin": "^2.7.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
